syntax = "proto3";

option csharp_namespace = "ECO.Service.Basket.Protos";

package greet;

service BasketProtoService{
	rpc SayHello(HelloRequest) returns (HelloReply);
}

message HelloRequest{
	string name = 1;
}

message HelloReply{
	string message = 1;
}